fix(input): add placeholder text-overflow style #INFR-892

--- a/src/date-picker/style/picker.scss
+++ b/src/date-picker/style/picker.scss
@@ -9,6 +9,9 @@
     transition: opacity 0.3s;
     width: 100%;
     cursor: pointer;
+    .form-control {
+        padding-right: 2 * $input-padding-x + 1rem;
+    }
 
     &:hover {
         .form-control {
