--- a/src/form/styles/forms.scss
+++ b/src/form/styles/forms.scss
@@ -42,6 +42,9 @@
         // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
         opacity: 1;
     }
+    &:placeholder-shown {
+        text-overflow: ellipsis;
+    }
 
     // Disabled and read-only inputs
     //
